# shift-test-task

./: .env  .gitignore  README.md  main.py  pyproject.toml
shift_test_task/auth/: hashing.py  security.py  views.py
shift_test_task/core/: config.py  create_admin.py  database.py  role_permission_decorator.py
shift_test_task/user/: crud.py  models.py  schemas.py  views.py
